--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,25 @@
 @import "nullstyle.scss";
 @import "ibg.scss";
 @import "footer.scss";
+@font-face {
+    
+    font-family: "Bang"; 
+    src: url("/fonts/Black.Angel.Demo.ttf") format("truetype"); 
+    font-style: normal; 
+    font-weight: normal; 
+    } 
 
 
+html{
+    font-family: Gilroy, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff
+}
 
 .wrapper {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background: black;
+    background: #121212;
 }
 
 
@@ -28,21 +39,23 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        
     }
     .full-screen__title {
         text-align: center;
         font-size: 30px;
         letter-spacing: 15px;
         font-weight: 700;
-        margin: 0px 0px 20px 0px;
+        margin: 0px 0px 30px 0px;
     }
     .full-screen__text {
+        font-family: 'Bang', "Helvetica Neue", Helvetica, sans-serif;
         text-align: center;
-        font-size: 18px;
+        font-size: 48px;
         letter-spacing: 10px;
+        margin: 0px 0px 30px 0px;
     }
-    .full-screen__video {
+    .full-screen__photo {
         position: absolute;
         top: 0;
         left: 0;
@@ -50,50 +63,8 @@
         height: 100%;
         object-fit: cover;
     }
-}
-.content {
-
-}
-.content__container {
-    padding: 20px 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.card {
-    margin: 0px 0px 20px 0px;
-    .card__row {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .card__image {
-        height: 500px;
-        width: 100%;
-        margin: 0px 0px 10px 0px;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 20px;
-        }
-    
-    
-    }
-    .card__title {
-        color: white;
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        font-size: 20px;
-        letter-spacing: 10px;
-        text-transform: uppercase;
-        margin: 0px 0px 5px 0px;
-    }
-    .card__text {
-        color: white;
-        font-size: 15px;
-        letter-spacing: 8px;
+    .full-screen__link{
+        text-decoration: underline;
+        letter-spacing: 5px;
     }
 }
