--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
 @font-face {
     
     font-family: "Bang"; 
-    src: url("/fonts/Black.Angel.Demo.ttf") format("truetype"); 
+    src: url("../fonts/Black.Angel.Demo.ttf") format("truetype"); 
     font-style: normal; 
     font-weight: normal; 
     } 
