--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,6 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
 }
 
-@media (max-width: 1000px) {
-  .container {
-    max-width: 800px;
-  }
-}
 @font-face {
   font-family: "Bang";
   src: url("../fonts/Black.Angel.Demo.ttf") format("truetype");
@@ -171,18 +166,37 @@ html {
   flex-direction: column;
 }
 .full-screen .full-screen__title {
+  padding: 0 10px;
   text-align: center;
-  font-size: 30px;
-  letter-spacing: 15px;
+  letter-spacing: 5px;
   font-weight: 700;
   margin: 0px 0px 30px 0px;
+}
+@media (max-width: 767px) {
+  .full-screen .full-screen__title {
+    font-size: calc(28px + 54.4 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .full-screen .full-screen__title {
+    font-size: calc(28px + 54.4 * (100vw / 1280));
+  }
 }
 .full-screen .full-screen__text {
   font-family: "Bang", "Helvetica Neue", Helvetica, sans-serif;
   text-align: center;
-  font-size: 48px;
   letter-spacing: 10px;
   margin: 0px 0px 30px 0px;
+}
+@media (max-width: 767px) {
+  .full-screen .full-screen__text {
+    font-size: calc(55px + 76.5 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .full-screen .full-screen__text {
+    font-size: calc(55px + 76.5 * (100vw / 1280));
+  }
 }
 .full-screen .full-screen__photo {
   position: absolute;
@@ -197,21 +211,9 @@ html {
   text-decoration: underline;
   letter-spacing: 5px;
 }
-@media (max-width: 430px) {
-  .full-screen .full-screen__title {
-    font-size: 20px;
-    letter-spacing: 10px;
-    font-weight: 700;
-    margin: 0px 0px 20px 0px;
-  }
-  .full-screen .full-screen__text {
-    font-size: 28px;
-    letter-spacing: 10px;
-    margin: 0px 0px 20px 0px;
-  }
-}
 
 .container {
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
 }
