--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,13 +2,23 @@
 @import "ibg.scss";
 @import "footer.scss";
 
-@media (max-width: 1000px) {
-    .container{
-        max-width: 800px;
+// @media (max-width: 1000px) {
+//     .container{
+//         max-width: 800px;
+//     }
+// }
+
+$maxWidth:1280;
+@mixin adaptiv-font($pcSize, $mobSize){
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width:767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width:767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
     }
 }
-
-
 
 @font-face {
     
@@ -51,16 +61,17 @@ html{
         
     }
     .full-screen__title {
+        padding: 0 10px;
         text-align: center;
-        font-size: 30px;
-        letter-spacing: 15px;
+        @include adaptiv-font(60, 28);
+        letter-spacing: 5px;
         font-weight: 700;
         margin: 0px 0px 30px 0px;
     }
     .full-screen__text {
         font-family: 'Bang', "Helvetica Neue", Helvetica, sans-serif;
         text-align: center;
-        font-size: 48px;
+        @include adaptiv-font(100, 55);
         letter-spacing: 10px;
         margin: 0px 0px 30px 0px;
     }
@@ -76,21 +87,20 @@ html{
         text-decoration: underline;
         letter-spacing: 5px;
     }
-    @media (max-width: 430px) {
-        .full-screen__title {
-            font-size: 20px;
-            letter-spacing: 10px;
-            font-weight: 700;
-            margin: 0px 0px 20px 0px;
-        }
-        .full-screen__text {
-            font-size: 28px;
-            letter-spacing: 10px;
-            margin: 0px 0px 20px 0px;
-        }
-    }
+    // @media (max-width:321px) {
+    //     .full-screen__title {
+    //         font-size: 28px;
+    //         letter-spacing: 5px;
+    //     }
+    //     .full-screen__text {
+    //         font-size: 55px;
+    //         letter-spacing: 10px;
+    //     }
+    // }
+
 }
 .container{
+    max-width: 1280px;
     margin: 0 auto;
     padding: 0 20px;
 }
