--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,6 @@ html {
 .full-screen .full-screen__title {
   padding: 0 10px;
   text-align: center;
-  letter-spacing: 5px;
   font-weight: 700;
   margin: 0px 0px 30px 0px;
 }
@@ -180,6 +179,16 @@ html {
 @media (min-width: 767px) {
   .full-screen .full-screen__title {
     font-size: calc(28px + 54.4 * (100vw / 1280));
+  }
+}
+@media (max-width: 767px) {
+  .full-screen .full-screen__title {
+    letter-spacing: calc(5px + 11.9 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .full-screen .full-screen__title {
+    letter-spacing: calc(5px + 11.9 * (100vw / 1280));
   }
 }
 .full-screen .full-screen__text {
