--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,16 @@ $maxWidth:1280;
         font-size: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
     }
 }
+@mixin adaptiv-letter-space($pcSize, $mobSize){
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width:767px) {
+        letter-spacing: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width:767px) {
+        letter-spacing: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
+    }
+}
 
 @font-face {
     
@@ -64,7 +74,7 @@ html{
         padding: 0 10px;
         text-align: center;
         @include adaptiv-font(60, 28);
-        letter-spacing: 5px;
+        @include adaptiv-letter-space(12, 5);
         font-weight: 700;
         margin: 0px 0px 30px 0px;
     }
@@ -87,20 +97,10 @@ html{
         text-decoration: underline;
         letter-spacing: 5px;
     }
-    // @media (max-width:321px) {
-    //     .full-screen__title {
-    //         font-size: 28px;
-    //         letter-spacing: 5px;
-    //     }
-    //     .full-screen__text {
-    //         font-size: 55px;
-    //         letter-spacing: 10px;
-    //     }
-    // }
 
 }
 .container{
-    max-width: 1280px;
+    max-width: #{$maxWidth + px};
     margin: 0 auto;
     padding: 0 20px;
 }
