--- a/css/style.css
+++ b/css/style.css
@@ -235,12 +235,17 @@ body {
 
 .about .about__body {
   display: flex;
+  gap: 10px;
+}
+.about .about__title {
+  margin: 0px 0px 20px 0px;
 }
 .about .about_image {
-  max-width: 100px;
-  height: 300px;
+  flex: 1 0 50%;
+  max-width: 100%;
 }
 .about .about_image img {
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
 }
