--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "ibg.scss";
 @import "footer.scss";
 
+$redColor: #4E0E1F;
 
 $maxWidth:1280;
 @mixin adaptiv-font($pcSize, $mobSize){
@@ -24,6 +25,29 @@ $maxWidth:1280;
         letter-spacing: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
     }
 }
+@mixin adaptiv-circle($pcSize, $mobSize){
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width:767px) {
+        width: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+        height: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width:767px) {
+        width: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
+        height: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
+    }
+}
+@mixin adaptiv-position($pcSize, $mobSize){
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width:767px) {
+        left: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+    }
+    @media (min-width:767px) {
+        left: calc(#{$mobSize + px} + #{$addMobSize} * (100vw / #{$maxWidth}));
+    }
+}
+
 
 @font-face {
     
@@ -107,19 +131,57 @@ body{
 }
 
 .about {
+    margin: 0px 0px 50px 0px;
     .about__body {
-        display: flex;
         gap: 10px;
     }
     .about__text {
 
     }
     .about__title {
-        margin: 0px 0px 20px 0px;
+
     }
     .about__text {
     }
     .about_image {
+        img{
+            border-radius: 0px 40px 0px 40px;
+        }
+
+    }
+    .about__circle{
+    top: 5px;
+    @include adaptiv-position(190, 110)
+    }
+
+
+}
+.block {
+    position: relative;
+    z-index: 10;
+    .block__title {
+        @include adaptiv-font(45, 25);
+        font-weight: 700;
+        margin: 0px 0px 40px 0px;
+        letter-spacing: 2px;
+    }
+    .block__title-circle {
+        position: absolute;
+        z-index: -1;
+
+    }
+    
+    .block__body {
+        display: flex;
+
+    }
+    
+    .block__text {
+        @include adaptiv-font(23, 14);
+
+    }
+    
+    .block__image {
         flex: 1 0 50%;
         max-width: 100%;
         img{
@@ -128,7 +190,30 @@ body{
         }
     }
 }
-.title {
+.circle {
+    @include adaptiv-circle(55, 30);
+    background-color: $redColor;
+    border-radius: 50%;
 }
-.text {
+
+.portfolio {
+
+    .portfolio__title {
+    }
+    .portfolio__circle {
+        top: 5px;
+        @include adaptiv-position(150, 80)
+    }
+    .portfolio__body {
+    }
+    .portfolio__colums {
+    }
+    .portfolio__colums-one {
+    }
+    .portfolio__colums-two {
+    }
+}
+
+
+.two {
 }
