--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,9 @@ body {
   }
 }
 
+.portfolio {
+  margin: 0px 0px 40px 0px;
+}
 .portfolio .portfolio__circle {
   top: 5px;
 }
@@ -342,9 +345,19 @@ body {
 .portfolio__items {
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
+@media (max-width: 431px) {
+  .portfolio__items {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+}
+@media (max-width: 352px) {
+  .portfolio__items {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
+}
 .portfolio__item img {
   width: 100%;
   -o-object-fit: cover;
@@ -354,4 +367,106 @@ body {
 .portfolio__item-big {
   grid-column: span 2;
   grid-row: span 2;
+}
+
+@media (min-width: 1339px) {
+  .last_item {
+    display: none;
+  }
+}
+.price .price__title {
+  margin: 0px 0px 50px 0px;
+}
+.price .price__circle {
+  top: 3px;
+}
+@media (max-width: 767px) {
+  .price .price__circle {
+    left: calc(45px + -42.5 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .price .price__circle {
+    left: calc(45px + -42.5 * (100vw / 1280));
+  }
+}
+.price .price__body {
+  padding: 0 20px;
+  display: flex;
+  gap: 20px;
+}
+.price .price__table {
+  flex: 1 0 50%;
+}
+.price .price__image {
+  flex: 1 0 50%;
+  position: relative;
+  min-height: 400px;
+}
+.price .price__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 0;
+     object-position: 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.price .price__689 {
+  display: none;
+}
+@media (max-width: 713px) {
+  .price .price__body {
+    position: relative;
+    z-index: 120;
+  }
+  .price .price__image {
+    display: none;
+  }
+}
+
+.table {
+  padding: 10px;
+  border: 1px solid #fff;
+}
+.table .table__items {
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  justify-content: space-between;
+}
+.table .table__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid white;
+  padding-bottom: 3px;
+  margin: 0px 0px 10px 0px;
+}
+@media (max-width: 767px) {
+  .table .table__item {
+    font-size: calc(11px + 5.1 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .table .table__item {
+    font-size: calc(11px + 5.1 * (100vw / 1280));
+  }
+}
+@media (max-width: 713px) {
+  .table .table__items {
+    position: relative;
+  }
+  .table .price__689 {
+    display: block;
+    position: relative;
+  }
+  .table .price__689 img {
+    position: absolute;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
