--- a/scss/style.scss
+++ b/scss/style.scss
@@ -253,7 +253,7 @@ body{
  //==========================================================================================================================
 
 .price {
-    
+    margin: 0px 0px 40px 0px;
     .price__title {
         margin: 0px 0px 50px 0px;
     }
