--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,9 @@ body {
   border-bottom: 2px solid white;
   letter-spacing: 5px;
 }
+.full-screen .full-screen__link a {
+  color: #fff;
+}
 
 .container {
   max-width: 1280px;
