--- a/scss/style.scss
+++ b/scss/style.scss
@@ -123,7 +123,9 @@ body{
         padding-bottom: 3px;
         border-bottom: 2px solid white;
         letter-spacing: 5px;
-
+        a{
+            color: #fff;
+        }
     }
 
 }
