--- a/scss/style.scss
+++ b/scss/style.scss
@@ -317,7 +317,7 @@ body{
             z-index: 120;
             &::before{
                 content: '';
-                background-image: url('/img/kamila.JPG'); 
+                background-image: url('../img/kamila.JPG'); 
                 position: absolute; 
                 background-size: cover;
                 top: 0; 
