--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,7 @@ body {
   min-height: 400px;
 }
 .price .price__image img {
+  border-radius: 5px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
