--- a/css/style.css
+++ b/css/style.css
@@ -655,3 +655,172 @@ body {
     font-size: calc(14px + 15.3 * (100vw / 1280));
   }
 }
+
+.form {
+  margin: 0px 0px 50px 0px;
+  position: relative;
+  z-index: 0;
+}
+.form .form__title {
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin: 0px 0px 50px 0px;
+  position: relative;
+  z-index: 1;
+}
+@media (max-width: 767px) {
+  .form .form__title {
+    font-size: calc(25px + 34 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .form .form__title {
+    font-size: calc(25px + 34 * (100vw / 1280));
+  }
+}
+.form .form__circle {
+  position: absolute;
+  z-index: -1;
+}
+@media (max-width: 767px) {
+  .form .form__circle {
+    top: calc(-15px + -8.5 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .form .form__circle {
+    top: calc(-15px + -8.5 * (100vw / 1280));
+  }
+}
+@media (max-width: 767px) {
+  .form .form__circle {
+    left: calc(21px + 40.8 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .form .form__circle {
+    left: calc(21px + 40.8 * (100vw / 1280));
+  }
+}
+@media (max-width: 767px) {
+  .form .form__circle {
+    width: calc(70px + 68 * ((100vw - 320px) / 1280));
+    height: calc(70px + 68 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .form .form__circle {
+    width: calc(70px + 68 * (100vw / 1280));
+    height: calc(70px + 68 * (100vw / 1280));
+  }
+}
+.form .form__circle img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .form .form__title {
+    margin: 0px 0px 30px 0px;
+  }
+}
+.form .form__body {
+  padding: 0 20px;
+  display: flex;
+  gap: 20px;
+}
+.form .form__logo {
+  flex: 1 0 50%;
+  position: relative;
+  min-height: 400px;
+}
+.form .form__logo img {
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 0;
+     object-position: 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.form .form__content {
+  flex: 1 0 50%;
+  padding: 5px;
+}
+@media (max-width: 713px) {
+  .form .form__content {
+    position: relative;
+    z-index: 120;
+    text-align: center;
+  }
+  .form .form__content::before {
+    content: "";
+    background-image: url("../img/kamila.JPG");
+    position: absolute;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    z-index: -1;
+  }
+  .form .form__logo {
+    display: none;
+  }
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.feedback .feedback__text {
+  margin: 0px 0px 10px 0px;
+  letter-spacing: 2px;
+  line-height: 20px;
+}
+@media (max-width: 767px) {
+  .feedback .feedback__text {
+    font-size: calc(14px + 3.4 * ((100vw - 320px) / 1280));
+  }
+}
+@media (min-width: 767px) {
+  .feedback .feedback__text {
+    font-size: calc(14px + 3.4 * (100vw / 1280));
+  }
+}
+.feedback .feedback__message {
+  letter-spacing: 2px;
+}
+.feedback .feedback__items {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.feedback .feedback__item {
+  padding: 5px;
+  opacity: 0.5;
+}
+.feedback .feedback__item:focus {
+  opacity: 1;
+}
+.feedback .feedback__buttom {
+  opacity: 1;
+  max-width: 100px;
+  padding: 5px 15px;
+  margin: 0 auto;
+}
+.feedback .feedback__buttom span {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 600;
+}
+
+textarea {
+  resize: none;
+}
