--- a/scss/style.scss
+++ b/scss/style.scss
@@ -592,6 +592,7 @@ body{
         max-width: 100px;
         padding: 5px 15px;
         margin: 0 auto;
+        background-color: #fff;
         span{
             text-transform: uppercase;
             letter-spacing: 3px;
