--- a/scss/style.scss
+++ b/scss/style.scss
@@ -597,6 +597,7 @@ body{
             text-transform: uppercase;
             letter-spacing: 3px;
             font-weight: 600;
+            color: #121212;
         }
     }
 }
